--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-01-22 10:47+0100\n"
+"POT-Creation-Date: 2024-02-12 09:50+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -555,6 +555,19 @@ msgstr "Alle Einträge ersetzen"
 msgid "Import"
 msgstr "Import"
 
+msgid "The name field cannot be empty."
+msgstr "Das Namensfeld darf nicht leer sein."
+
+msgid "Please fill out a new name"
+msgstr "Bitte geben sie einen neuen Namen an"
+
+#, python-format
+msgid "Invalid name. A valid suggestion is: ${name}"
+msgstr "Ungültiger Name. Ein gültiger Vorschlag ist: ${name}"
+
+msgid "An entry with the same name exists"
+msgstr "Ein Eintrag mit diesem Namen existiert bereits"
+
 msgid "Art"
 msgstr "Kunst"
 
@@ -834,16 +847,6 @@ msgstr ""
 
 msgid "URL path"
 msgstr "URL Pfad"
-
-msgid "Please fill out a new name"
-msgstr "Bitte geben sie einen neuen Namen an"
-
-#, python-format
-msgid "Invalid name. A valid suggestion is: ${name}"
-msgstr "Ungültiger Name. Ein gültiger Vorschlag ist: ${name}"
-
-msgid "An entry with the same name exists"
-msgstr "Ein Eintrag mit diesem Namen existiert bereits"
 
 msgid "Selection"
 msgstr "Auswahl"
@@ -2352,6 +2355,9 @@ msgstr ""
 msgid "Hide contact info in sidebar"
 msgstr "Kontaktinformationen in Sidebar ausblenden"
 
+msgid "Show people on bottom of main page (instead of sidebar)"
+msgstr "Personen am unteren Rand der Hauptseite anzeigen (statt in Sidebar)"
+
 msgid "Use text instead of lead in the newsletter"
 msgstr "Text statt Einleitung im Newsletter benutzen"
 
@@ -2679,9 +2685,6 @@ msgstr "Eintrag abweisen"
 
 msgid "Chats"
 msgstr "Chats"
-
-msgid "Chat with"
-msgstr "Chat mit"
 
 msgid "Link"
 msgstr "Verknüpfung"
@@ -5345,6 +5348,9 @@ msgstr ""
 "Gehen Sie mit Vorsicht vor. Tickets und die darin enthaltenen Daten können "
 "unwiderruflich gelöscht werden."
 
+msgid "Chat"
+msgstr "Chat"
+
 msgid "Topics"
 msgstr "Themen"
 
@@ -5586,5 +5592,5 @@ msgstr "Ein Konto wurde für Sie erstellt"
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
 
-msgid "Show people on bottom of main page (instead of sidebar)"
-msgstr "Personen am unteren Rand der Hauptseite anzeigen (statt in Sidebar)"
+#~ msgid "Chat with"
+#~ msgstr "Chat mit"
