Election Day: Optionally keep canidates, lists and list connections when clearing results. TYPE: Feature LINK: OGC-1478

--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 13:24+0100\n"
+"POT-Creation-Date: 2024-03-06 09:12+0100\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -265,6 +265,16 @@ msgstr "Regional"
 
 msgid "Communal"
 msgstr "Kommunal"
+
+msgid "Also clear candidates, lists and list connections."
+msgstr "Lösche auch Kandiderende, Listen und Listenverbindungen."
+
+msgid ""
+"Beware that some formats such as eCH ship candidates, lists and list "
+"connections separately."
+msgstr ""
+"Achtung, einige Formate wie eCH versenden Kandidaten, Listen und "
+"Listenverbindungen separat."
 
 msgid "Name"
 msgstr "Name"
