--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 13:24+0100\n"
+"POT-Creation-Date: 2024-03-06 09:12+0100\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -264,6 +264,17 @@ msgstr "Régional"
 
 msgid "Communal"
 msgstr "Municipal"
+
+msgid "Also clear candidates, lists and list connections."
+msgstr ""
+"Supprime également les candidats, les listes et les connexions de listes."
+
+msgid ""
+"Beware that some formats such as eCH ship candidates, lists and list "
+"connections separately."
+msgstr ""
+"Attention, certains formats tels que eCH envoient les candidats, les listes "
+"et les connexions de listes séparément."
 
 msgid "Name"
 msgstr "Nom"
