Add election information import

--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 10:05+0100\n"
+"POT-Creation-Date: 2024-03-01 11:10+0100\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -110,6 +110,12 @@ msgstr "Colur nunvalaivla: : ${col"
 msgid "File not supported"
 msgstr "Format da datoteca betg sustegnì"
 
+msgid "Domain not supported"
+msgstr "Domain betg supportà"
+
+msgid "Changing types is not supported"
+msgstr "La midada da tipas na vegn betg sustegnida"
+
 msgid "Invalid election values"
 msgstr "Datas electoralas nunvalaivlas"
 
@@ -206,16 +212,8 @@ msgstr "Nagins resultats da partidas per l'onn ${year}"
 msgid "Panachage results ids and id not consistent"
 msgstr "Inconsistenza tranter Panachage results ids ed id"
 
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"Ils tipps da votaziun na pon betg vegnir midads automaticamain, vegnigelas a "
-"stritar manualmain"
-
-msgid "Domain not supported"
-msgstr "Domain betg supportà"
-
 msgid "Vote type not supported"
-msgstr "Moda da votar betg sustegnida"
+msgstr "Tip da votaziun betg sustegnida"
 
 msgid "Invalid ballot type"
 msgstr "Tip da votaziun nunvalaivel"
