--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 10:05+0100\n"
+"POT-Creation-Date: 2024-03-01 11:10+0100\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -110,6 +110,12 @@ msgstr "Ungültige Farbe: ${col}"
 msgid "File not supported"
 msgstr "Dateiformat nicht unterstützt"
 
+msgid "Domain not supported"
+msgstr "Ebene nicht unterstützt"
+
+msgid "Changing types is not supported"
+msgstr "Der Wechsel von Typen wird nicht unterstützt"
+
 msgid "Invalid election values"
 msgstr "Ungültige Wahldaten"
 
@@ -201,14 +207,6 @@ msgstr "Keine Parteiresultate für das Jahr ${year}"
 
 msgid "Panachage results ids and id not consistent"
 msgstr "Panachage results ids und id nicht konsistent"
-
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"Abstimmungstypen können nicht automatisch geändert werden, bitte manuell "
-"löschen"
-
-msgid "Domain not supported"
-msgstr "Ebene nicht unterstützt"
 
 msgid "Vote type not supported"
 msgstr "Abstimmungsart nicht unterstützt"
