--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 10:05+0100\n"
+"POT-Creation-Date: 2024-03-01 11:10+0100\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -109,6 +109,12 @@ msgstr "Couleur non valide : ${col}"
 msgid "File not supported"
 msgstr "Format de fichier non pris en charge"
 
+msgid "Domain not supported"
+msgstr "Domaine non pris en charge."
+
+msgid "Changing types is not supported"
+msgstr "Le changement de types n'est pas pris en charge"
+
 msgid "Invalid election values"
 msgstr "Valeurs des élections non valides"
 
@@ -200,14 +206,6 @@ msgstr "Aucun résultat de parti pour l'année ${year}"
 
 msgid "Panachage results ids and id not consistent"
 msgstr "Panachage results ids and id ne sont pas consistente"
-
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"Les types de vote ne peuvent pas être changés automatiquement, veuillez les "
-"supprimer manuellement"
-
-msgid "Domain not supported"
-msgstr "Domaine non pris en charge."
 
 msgid "Vote type not supported"
 msgstr "Type de vote non pris en charge"
