--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 08:22+0100\n"
+"POT-Creation-Date: 2024-03-04 11:15+0100\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -201,10 +201,8 @@ msgstr "Aucun résultat de parti pour l'année ${year}"
 msgid "Panachage results ids and id not consistent"
 msgstr "Panachage results ids and id ne sont pas consistente"
 
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"Les types de vote ne peuvent pas être changés automatiquement, veuillez les "
-"supprimer manuellement"
+msgid "Changing types is not supported"
+msgstr "Le changement de types n'est pas pris en charge"
 
 msgid "Domain not supported"
 msgstr "Domaine non pris en charge."
