--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 08:22+0100\n"
+"POT-Creation-Date: 2024-03-04 11:15+0100\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -200,10 +200,8 @@ msgstr "Nessun risultato di partito per l'anno ${year}"
 msgid "Panachage results ids and id not consistent"
 msgstr "Panachage results ids e id non coerente"
 
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"I tipi di voto non possono essere cambiati automaticamente, si prega di "
-"eliminarli manualmente"
+msgid "Changing types is not supported"
+msgstr La modifica dei tipi non è supportata"
 
 msgid "Domain not supported"
 msgstr "Livello non supportato"
