--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 08:22+0100\n"
+"POT-Creation-Date: 2024-03-04 11:15+0100\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -206,10 +206,8 @@ msgstr "Nagins resultats da partidas per l'onn ${year}"
 msgid "Panachage results ids and id not consistent"
 msgstr "Inconsistenza tranter Panachage results ids ed id"
 
-msgid "Vote types cannot be changed automatically, please delete manually"
-msgstr ""
-"Ils tipps da votaziun na pon betg vegnir midads automaticamain, vegnigelas a "
-"stritar manualmain"
+msgid "Changing types is not supported"
+msgstr "La midada da tipas na vegn betg sustegnida"
 
 msgid "Domain not supported"
 msgstr "Domain betg supportà"
