--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-04 11:15+0100\n"
+"POT-Creation-Date: 2024-03-04 12:03+0100\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -164,10 +164,6 @@ msgid "Ausmittlungsstand set to final but AnzPendentGde is not 0"
 msgstr "Ausmittlungsstand impostato su finale ma AnzPendentGde non è 0"
 
 #, python-format
-msgid "${msg}"
-msgstr "${msg}"
-
-#, python-format
 msgid "${var} is missing."
 msgstr "${var} è scomparso"
 
@@ -201,7 +197,7 @@ msgid "Panachage results ids and id not consistent"
 msgstr "Panachage results ids e id non coerente"
 
 msgid "Changing types is not supported"
-msgstr La modifica dei tipi non è supportata"
+msgstr "La modifica dei tipi non è supportata"
 
 msgid "Domain not supported"
 msgstr "Livello non supportato"
@@ -1840,9 +1836,6 @@ msgstr ""
 #, python-format
 msgid "The year ${year} is not yet supported"
 msgstr "L'anno ${year} non viene ancora supportato"
-
-msgid "This source has already elections assigned to it"
-msgstr "Questa fonte ha già delle elezioni assegnate"
 
 msgid "Invalid id"
 msgstr "ID non valido"
