Add validator, translations and adjust design for org

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-02-14 10:41+0100\n"
+"POT-Creation-Date: 2024-03-06 08:20+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1498,6 +1498,10 @@ msgstr "Fixierung der Kopfzeilenelemente"
 
 msgid "Please add an url to each link"
 msgstr "Bitte geben Sie für jeden Link eine URL ein"
+
+msgid "Your URLs must start with http://, https:// or / (for internal links)"
+msgstr ""
+"Ihre URLs müssen mit http://, https:// oder / (für interne Links) beginnen"
 
 msgid "Homepage Cover"
 msgstr "Startseiten Cover"
